name:                   swatches
version:                0.1.0.0
-- description:
homepage:               https://github.com/MWRuszczycky/swatches#readme
author:                 Mark W. Ruszczycky
maintainer:             mwruszczycky@gmail.com
copyright:              2018 Mark W. Ruszczycky
license:                BSD3
license-file:           LICENSE
build-type:             Simple
cabal-version:          >= 1.10
extra-source-files:     README.md

executable swatches
  hs-source-dirs:       src
  main-is:              Main.hs
  default-language:     Haskell2010
  ghc-options:          -threaded -O2
  build-depends:        base >=4.7 && <5
                      , brick
                      , unix
                      , vty
  other-modules:        Controller
                      , Model
                      , Paths_swatches
                      , Resources
                      , Types
                      , Viewer
